Implement gain/loss via Bluetooth LE Environmental Sensing Sensor.
Fixes #1424.